Revert "UNDO COMMIT"
This reverts commit d3cf23ebefbfde68f387a23a80ae81aea018783e.

--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,11 @@
 			<artifactId>tools</artifactId>
 			<version>-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>eu.upmc.mas.fosyma.startjade</groupId>
+			<artifactId>startjade</artifactId>
+			<version>0.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
